// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

import "wfa/measurement/internal/kingdom/duchy_measurement_log_entry_stage_attempt.proto";

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

message DuchyMeasurementLogEntryDetails {
  // ID of some child of the Duchy from an external system.
  //
  // For example, this may identify a specific job or task.
  string duchy_child_reference_id = 1;

  // Details about the computation stage that the log event occurred during.
  // Only set if the event happened during computation.
  DuchyMeasurementLogEntryStageAttempt stage_attempt = 2;
}
